# CPUFO

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.docker/nginx/: nginx.conf
ml/: constant.py  conversation_pipeline.py  mistral.py  test.py
ml/core/: document_generator.py  image_processing.py
ml/llm/: utiils.py
routing/v1/: recognition.py
schemas/: recognition.py
utils/: utils.py
